Fixed spacing on latest news pop-up

--- a/package_website_template/assets/css/custom.less
+++ b/package_website_template/assets/css/custom.less
@@ -55,7 +55,7 @@
 body                  { background-color:#FFFFFF;}
 .container            { min-height:153px; width:100%;}
 .heading-margin       { padding-left:25px;}
-.email .heading-margin{ padding-left:0px; margin: 0 !important;}
+.email .heading-margin{ padding-left:0px; margin: 0 0 10px!important;}
 /* ----// END //---- */
 
 
@@ -326,6 +326,7 @@ a.social                      { color: @SocialIconsLink;}
 .popups-bg                            { background-color: @SectionBgColor ; background-image: none ;}
 .email-friend                         { width:302px; background-color: @SectionBgColor !important; background-image: none!important; padding:7px; height:417px;}
 div.email                             { width:302px; background-color: @SectionBgColor !important; background-image: none!important; padding:7px; height:417px;}
+div.email:before                     { content: "";}
 /* ----// END //---- */
 
 
